--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-
+    <H1 id="title">Tic-Tac-Toe</H1>
     <div class="container">
         <div class="box" data-cell></div>
         <div class="box" data-cell></div>
